# Alpacca

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/workflows/: build.yml  release.yml
alpacca/: __init__.py  __main__.py  chat.py  cli.py  gguf.py  history.py  kernels.py  model.py  pull.py  qmatrix.py  quants.py  sample.py  serve.py  store.py  tensor.py  tokenizer.py
prompts/: 01-performance-overhaul.md  02-native-quant-gemv-kernel.md
scripts/: install.ps1  install.sh
src/: json.cpp  json.h  main.cpp  pull.cpp  pull.h  runner.cpp  runner.h  sha256.cpp  sha256.h  store.cpp  store.h  util.cpp  util.h
tests/: acceptance.py  bench.py  hermes_acceptance.sh  make_bench_model.py  make_tiny_model.py  mock_registry.py  real_model_test.py  smoke.py  smoke.sh
